# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/powermgr/thermal_manager/thermalmgr.gni")

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${thermal_service_zidl}/include",
    "${ability_runtime_services_path}/appmgr/include",
    "${thermal_innerkits}/native/include",
  ]
}

ohos_shared_library("mock_thermalsrv_client") {
  sources = [ "src/mock_thermal_mgr_client.cpp" ]

  configs = [
    "${utils_path}:utils_config",
    ":module_private_config",
  ]

  deps = [ "${thermal_service_zidl}:thermalmgr_proxy" ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
  subsystem_name = "powermgr"
  part_name = "thermal_manager"
}
