# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//build/ohos/taihe_idl/taihe.gni")
import("../../../../../../thermalmgr.gni")

module_output_path = "thermal_manager/thermal_manager"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${taihe_generated_file_path}/include",
    "${taihe_toolchain_path}/include",
    "../../include",
  ]
}

ohos_unittest("thermal_taihe_native_test") {
  module_out_path = module_output_path

  sources = [
    "thermal_ani_constructor_test.cpp",
    "thermal_taihe_native_test.cpp",
    "../../src/ohos.thermal.impl.cpp",
    "../../src/thermal_level_callback.cpp",
  ]

  configs = [
    ":module_private_config",
    "${utils_path}:coverage_flags",
  ]

  deps = [
    "${thermal_frameworks}/ets/taihe/thermal:thermal_manager_taihe_native",
    "${thermal_frameworks}/ets/taihe/thermal:run_taihe",
    "${thermal_inner_api}:thermalsrv_client",
    "${thermal_inner_api}:thermalmgr_listener",
    "${utils_path}:thermal_utils",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "runtime_core:ani",
  ]
}